# docnote_extract

./: pyproject.toml
.github/workflows/: on_pr-run_cicd.yaml  on_release-publish_pypi.yaml  on_trigger-publish_pypi_test.yaml
sidecars_py/docnote_extract_testpkg/src_py/docnote_extract_testpkg/_hand_rolled/: noteworthy.py  uses_dataclasses.py
src_py/docnote_extract/: _extraction.py  _gathering.py  _summarization.py  crossrefs.py  normalization.py  summaries.py
tests_py/: _extraction.integr8.test.py  _extraction.test.py  _gathering.e2e.test.py  _summarization.integr8.test.py  discovery.test.py  normalization.test.py
